<resources>
    <string name="app_name">2BeDone</string>

    <string name="tasks">Tasks</string>
    <string name="insights">Insights</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="after">7 Days</string>
    <string name="project">Project</string>
    <string name="create">Create</string>
    <string name="projects">Projetos</string>
    <string name="create_project_description">You can separate your tasks between your projects</string>
    <string name="create_project_example">Example: Gym, School, Work</string>
    <string name="select_date_limit">Select Date Limit</string>
    <string name="create_task">Create Task</string>
    <string name="task">Task</string>
    <string name="project_name_alert">You should insert the project name</string>
    <string name="project_name_error">Something went wrong, try another project name.</string>
    <string name="create_task_description">Create your tasks according to your projects.</string>
    <string name="date_format">MM/dd/yyyy</string>

    <string name="seven_days_ago">7 Days Ago</string>

    <string name="alert_delete_task_title">Delete Task?</string>
    <string name="alert_delete_task_message">Do you want to delete the task?</string>

    <string name="alert_delete_project_title">Delete Project??</string>
    <string name="alert_delete_project_message">Do you want to delete the project?</string>

    <string name="alert_delete_positive">Delete</string>
    <string name="alert_delete_negative">Cancel</string>

    <string name="have_to_create_project">Before creating tasks, you have to create any project</string>
    <string name="task_count">Done Tasks: </string>

    <string-array name="spinner_tasks">
        <item>To Do</item>
        <item>Overdue</item>
    </string-array>

    <string name="all">All:</string>
    <string name="done">Done:</string>
    <string name="expired_or_to_do">Overdue/To Do:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>